force-app/main/default/objects/Pharam_Product__c/Pharam_Product__c.object-meta.xml
<CustomObject>
    <label>PharamProduct</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharam Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PharamProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>