force-app/main/default/objects/Pharam_Product__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>BusinessType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Health-Care</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>