force-app/main/default/objects/Pharam_Product__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inventory</label>
    <length>25</length>
    <type>Text</type>
</CustomField>