force-app/main/default/objects/Pharam_Product__c/fields/ProductSpecification__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProductSpecification</label>
    <length>25</length>
    <type>Text</type>
</CustomField>