force-app/main/default/objects/Pharam_Product__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProductType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>