force-app/main/default/objects/Pharam_Product__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small1</fullName>
            </value>
            <value>
                <fullName>Small2</fullName>
            </value>
            <value>
                <fullName>Small3</fullName>
            </value>
            <value>
                <fullName>Medium1</fullName>
            </value>
            <value>
                <fullName>Medium2</fullName>
            </value>
            <value>
                <fullName>Medium3</fullName>
            </value>
            <value>
                <fullName>Large1</fullName>
            </value>
            <value>
                <fullName>Large2</fullName>
            </value>
            <value>
                <fullName>Large3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>