force-app/main/default/objects/Pharam_Product__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <summarizedField>PharamProductInvoice__c.CreatedDate</summarizedField>
    <summaryForeignKey>PharamProductInvoice__c.PharamProduct__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>