force-app/main/default/objects/Pharam_Product__c/fields/Total_Number_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Sample__c</fullName>
    <label>Total Number of Sample</label>
    <summaryForeignKey>Sample__c.PharamProduct__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>