force-app/main/default/objects/Pharam_Product__c/fields/Total_Sample_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Quantity__c</fullName>
    <label>Total Sample Quantity</label>
    <summarizedField>Sample__c.Quantity__c</summarizedField>
    <summaryForeignKey>Sample__c.PharamProduct__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>